Fix app layout cropping

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,8 +52,8 @@
 @layer base {
   html,
   body {
+    min-height: 100%;
     max-width: 100%;
-    overflow-x: hidden;
   }
 
   * {
